--- a/blogs/电脑常用设置.md
+++ b/blogs/电脑常用设置.md
@@ -12,6 +12,8 @@ Hardware Media Key Handling
 ```powershell
 # 开启电源S3
 reg add HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Power\ /v PlatformAoAcOverride /t REG_DWORD /d 0
+# 关闭电源S3
+reg delete HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Power /v PlatformAoAcOverride /f
 
 # 开启无人值守护超时
 reg delete HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Power\PowerSettings\238C9FA8-0AAD-41ED-83F4-97BE242C8F20\7bc4a2f9-d8fc-4469-b07b-33eb785aaca0 /v Attributes /f
